adding sample.html

--- a/sample.html
+++ b/sample.html
@@ -5,6 +5,7 @@
         <ul>
             <li>"hello"</li>
             <li>"everyone"</li>
+            <li>"hola"</li>
         </ul>
     </body>
 </html>
